# physx3d-sim

./: .gitignore  CMakeLists.txt  README.md
docs/: RenderingUpgradeSpec.md
src/: main.cpp
src/app/: AppBootstrap.cpp  AppBootstrap.h  AppLoop.cpp  AppLoop.h  AppLoopInternal.h  AppLoopSupport.cpp  AppRuntime.h  CameraFocus.cpp  CameraFocus.h  FixedStepRunner.cpp  FrameUpdate.h  InputStage.cpp  InputStage.h  RenderStage.cpp  RenderStage.h  ScenePresentation.cpp  ScenePresentation.h  SceneSnapshot.cpp  SceneSnapshot.h  SceneUi.cpp  SimulationController.h  SimulationStage.cpp  SimulationStage.h  SpatialHud.cpp  SpatialHud.h  Windowing.h
src/input/: Bindings.cpp  Bindings.h  Camera.cpp  Camera.h
src/render/: FrameRenderer.cpp  FrameRenderer.h  FrameRendererInternal.h  FrameRendererPasses.cpp  FrameRendererResources.cpp  FrameRendererShaders.h  RenderMaterial.cpp  RenderMaterial.h  SceneLighting.cpp  SceneLighting.h  SceneRenderer.cpp  SceneRenderer.h  ShaderUtil.cpp  ShaderUtil.h  SphereMesh.cpp  SphereMesh.h
src/sim/: Body.h  Broadphase.cpp  Broadphase.h  Collision.cpp  Collision.h  DefaultScene.cpp  DefaultScene.h  DefaultWorld.cpp  DefaultWorld.h  Material.cpp  Material.h  Quaternion.h  Vec3.h  World.cpp  World.h  WorldCollision.cpp
src/ui/: DebugOverlay.cpp  DebugOverlay.h  MinimapLayout.h  OverlayRenderer.cpp  OverlayRenderer.h  OverlayRendererCore.cpp  OverlayRendererDraw.cpp  OverlayRendererDrawShared.h  OverlayRendererInternal.h  OverlayRendererPauseMenu.cpp  PauseMenu.cpp  PauseMenu.h  PauseMenuActions.cpp  PauseMenuController.cpp  PauseMenuController.h  PauseMenuDisplay.cpp  PauseMenuHud.cpp  PauseMenuInput.cpp  PauseMenuInternal.h  PauseMenuLayout.cpp  PauseMenuLayout.h  PauseMenuNavigation.cpp  PauseMenuSettingsIO.cpp  PauseMenuShared.cpp  PauseMenuShared.h  PauseMenuState.cpp  PauseMenuView.cpp
tests/: FocusCameraTests.cpp  MinimapTests.cpp  PauseMenuControllerTests.cpp  PhysicsCoreTests.cpp  PhysicsRegressionTests.cpp  RenderMaterialTests.cpp  SceneLightingTests.cpp  TestMain.cpp  TestRegistry.h  UiPauseMenuTests.cpp
